add some more tests
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23847 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/kdc/krb5.conf.in
+++ b/tests/kdc/krb5.conf.in
@@ -70,5 +70,6 @@
 		TEST3.H5L.SE = TEST2.H5L.SE
 	}
 	TEST.H5L.SE = {
-		TEST4.H5L.SE = TEST3.H5L.SE TEST2.H5L.SE
+		TEST4.H5L.SE = TEST2.H5L.SE
+		TEST4.H5L.SE = TEST3.H5L.SE
 	}
