Fix merged build.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -102,6 +102,7 @@ kdcsrcdir := kdc
 ntp_signdsrcdir := ntp_signd
 wmisrcdir := lib/wmi
 tallocsrcdir := ../lib/talloc
+comsrcdir := $(srcdir)/lib/com
 
 include data.mk
 
