--- a/source3/configure.in
+++ b/source3/configure.in
@@ -6272,8 +6272,10 @@ fi
 SMBD_LIBS="$samba_dmapi_libs"
 AC_SUBST(SMBD_LIBS)
 
+CFLAGS="${CFLAGS} \$(FLAGS)"
+
 if test x$MERGED_BUILD != x1; then
-	CFLAGS="${CFLAGS} \$(FLAGS) -D_SAMBA_BUILD_=3"
+	CFLAGS="${CFLAGS} -D_SAMBA_BUILD_=3"
 fi
 
 AC_OUTPUT(Makefile
