s3-build: let ctags/etags start from the toplevel dir.
Guenther

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2649,10 +2649,10 @@ include/build_env.h: script/build_env.sh
 proto::
 
 etags::
-	etags `find $(srcdir) -name "*.[ch]"`
+	etags `find $(srcdir)/.. -name "*.[ch]"`
 
 ctags::
-	ctags `find $(srcdir) -name "*.[ch]"`
+	ctags `find $(srcdir)/.. -name "*.[ch]"`
 
 realclean:: clean
 	-rm -f config.log bin/.dummy script/findsmb script/gen-8bit-gap.sh
