--- a/source4/Makefile
+++ b/source4/Makefile
@@ -136,6 +136,7 @@ ifneq ($(SKIP_DEP_FILES),yes)
 clean::
 	@echo Removing dependency files
 	@find . -name '*.d' -o -name '*.hd' | xargs rm -f
+	@find ../lib -name '*.d' -o -name '*.hd' | xargs rm -f
 endif
 else
 include $(srcdir)/static_deps.mk
