--- a/source4/Makefile
+++ b/source4/Makefile
@@ -77,7 +77,7 @@ libstreamsrcdir := lib/stream
 libutilsrcdir := lib/util
 libtdrsrcdir := lib/tdr
 libdbwrapsrcdir := lib/dbwrap
-libcryptosrcdir := lib/crypto
+libcryptosrcdir := ../lib/crypto
 libtorturesrcdir := lib/torture
 smb_serversrcdir := smb_server
 libcompressionsrcdir := ../lib/compression
