--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -320,7 +320,7 @@ LIB_OBJ = $(LIBSAMBAUTIL_OBJ) \
 	  lib/signal.o lib/system.o lib/sendfile.o lib/recvfile.o lib/time.o \
 	  lib/ufc.o lib/genrand.o lib/username.o \
 	  lib/util_pw.o lib/access.o lib/smbrun.o \
-	  lib/bitmap.o lib/crc32.o lib/dprintf.o \
+	  lib/bitmap.o ../lib/crypto/crc32.o lib/dprintf.o \
 	  lib/xfile.o lib/wins_srv.o $(UTIL_REG_OBJ) \
 	  lib/util_str.o lib/clobber.o lib/util_sid.o lib/util_uuid.o \
 	  lib/util_unistr.o lib/util_file.o lib/data_blob.o \
