Consistently use lower case variable names for path variables.
Patch by Matthias Dieter Wallnöfer <mwallnoefer@yahoo.de> and me.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -10,11 +10,11 @@ include mkconfig.mk
 
 pidldir := $(srcdir)/../pidl
 
-BASEDIR = $(prefix)
-TORTUREDIR = $(libdir)/torture
-SWATDIR = $(datadir)/swat
-SETUPDIR = $(datadir)/setup
-NCALRPCDIR = $(localstatedir)/ncalrpc
+basedir = $(prefix)
+torturedir = $(libdir)/torture
+swatdir = $(datadir)/swat
+setupdir = $(datadir)/setup
+ncalrpcdir = $(localstatedir)/ncalrpc
 
 BNLD = $(LD)
 BNLD_FLAGS = $(LDFLAGS) $(SYS_LDFLAGS)
@@ -133,7 +133,7 @@ include $(srcdir)/static_deps.mk
 endif
 
 clean::
-	@find ../lib ../libcli  -name '*.o' -o -name '*.hd' | xargs rm -f
+	@find ../lib ../libcli -name '*.o' -o -name '*.hd' | xargs rm -f
 
 DEFAULT_HEADERS = $(srcdir)/lib/util/dlinklist.h \
 		  $(srcdir)/version.h
@@ -155,7 +155,7 @@ testsuite:: bin/smbclient bin/cifsdd bin/smbtorture bin/nmblookup
 
 showlayout:: 
 	@echo 'Samba will be installed into:'
-	@echo '  basedir:     $(BASEDIR)'
+	@echo '  basedir:     $(basedir)'
 	@echo '  bindir:      $(bindir)'
 	@echo '  sbindir:     $(sbindir)'
 	@echo '  libdir:      $(libdir)'
@@ -166,10 +166,10 @@ showlayout::
 	@echo '  piddir:      $(piddir)'
 	@echo '  lockdir:     $(lockdir)'
 	@echo '  logfilebase: $(logfilebase)'
-	@echo '  setupdir:    $(SETUPDIR)'
-	@echo '  swatdir:     $(SWATDIR)'
+	@echo '  setupdir:    $(setupdir)'
+	@echo '  swatdir:     $(swatdir)'
 	@echo '  mandir:      $(mandir)'
-	@echo '  torturedir:  $(TORTUREDIR)'
+	@echo '  torturedir:  $(torturedir)'
 	@echo '  datadir:     $(datadir)'
 	@echo '  winbindd_socket_dir:  $(winbindd_socket_dir)'
 	@echo '  ntp_signd_socket_dir:  $(ntp_signd_socket_dir)'
@@ -194,10 +194,10 @@ install:: showlayout everything installbin installsbin installdat installswat in
 
 installdirs::
 	@$(SHELL) $(srcdir)/script/installdirs.sh \
-		$(DESTDIR)$(BASEDIR) \
+		$(DESTDIR)$(basedir) \
 		$(DESTDIR)$(bindir) \
 		$(DESTDIR)$(sbindir) \
-		$(DESTDIR)$(TORTUREDIR) \
+		$(DESTDIR)$(torturedir) \
 		$(DESTDIR)$(libdir) \
 		$(DESTDIR)$(modulesdir) \
 		$(DESTDIR)$(mandir) \
@@ -211,7 +211,7 @@ installdirs::
 		$(DESTDIR)$(logfilebase) \
 		$(DESTDIR)$(privatedir)/tls \
 		$(DESTDIR)$(includedir) \
-		$(DESTDIR)$(PKGCONFIGDIR) \
+		$(DESTDIR)$(pkgconfigdir) \
 		$(DESTDIR)$(sysconfdir)
 
 installbin:: installdirs
@@ -230,16 +230,16 @@ installdat:: installdirs
 
 installswat:: installdirs
 #SWAT has been disabled until further notice
-#	@$(SHELL) $(srcdir)/script/installswat.sh $(DESTDIR)$(SWATDIR) $(srcdir)
+#	@$(SHELL) $(srcdir)/script/installswat.sh $(DESTDIR)$(swatdir) $(srcdir)
 
 installman:: manpages installdirs
 	@$(SHELL) $(srcdir)/script/installman.sh $(DESTDIR)$(mandir) $(MANPAGES)
 
 installmisc:: installdirs
-	@$(SHELL) $(srcdir)/script/installmisc.sh $(srcdir) $(DESTDIR)$(SETUPDIR) $(DESTDIR)$(bindir)
+	@$(SHELL) $(srcdir)/script/installmisc.sh $(srcdir) $(DESTDIR)$(setupdir) $(DESTDIR)$(bindir)
 
 installpc:: installdirs
-	@$(SHELL) $(srcdir)/script/installpc.sh $(builddir) $(DESTDIR)$(PKGCONFIGDIR) $(PC_FILES)
+	@$(SHELL) $(srcdir)/script/installpc.sh $(builddir) $(DESTDIR)$(pkgconfigdir) $(PC_FILES)
 
 uninstall:: uninstallbin uninstallman uninstallmisc uninstalllib uninstallheader \
 	uninstallplugins
