Re-add uninstallplugins, there has to be at least one instance of this.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -285,6 +285,8 @@ uninstallman::
 	@echo "Removing manpages"
 	@$(SHELL) $(srcdir)/script/uninstallman.sh $(DESTDIR)$(mandir) $(MANPAGES)
 
+uninstallplugins::
+
 uninstallpc::
 	@echo "Removing package configurations"
 	@cd $(DESTDIR)$(pkgconfigdir); rm -f $(notdir $(PC_FILES))
