fix libclinbtsrcdir variable.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -97,7 +97,7 @@ ntvfssrcdir := ntvfs
 ntptrsrcdir := ntptr
 librpcsrcdir := librpc
 libclisrcdir := libcli
-libclinbtsrcdir := ../libcli
+libclinbtsrcdir := ../libcli/nbt
 pyscriptsrcdir := $(srcdir)/scripting/python
 kdcsrcdir := kdc
 ntp_signdsrcdir := ntp_signd
