remove common lib object files on make cleanlib from source3
source4 already cleans up the object files on make clean.  This patch
modifies source3 to also do this.

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2660,6 +2660,10 @@ uninstallpammodules::
 # Toplevel clean files
 TOPFILES=dynconfig.o
 
+cleanlibs::
+	-rm -f ../lib/*/*.o ../lib/*/*/*.o \
+		../libcli/*.o ../libcli/*/*.o
+
 clean:: cleanlibs
 	-rm -f include/build_env.h
 	-rm -f smbd/build_options.c
