--- a/.gitignore
+++ b/.gitignore
@@ -231,11 +231,11 @@ source4/lib/tdb/bin/tdbtool
 source4/lib/tdb/bin/tdbtorture
 source4/lib/tdr/tdr_proto.h
 source4/lib/util/apidocs
-source4/lib/util/asn1_proto.h
-source4/lib/util/pidfile.h
-source4/lib/util/unix_privs.h
-source4/lib/util/util_proto.h
-source4/lib/util/util_tdb.h
+lib/util/asn1_proto.h
+lib/util/pidfile.h
+lib/util/unix_privs.h
+lib/util/util_proto.h
+lib/util/util_tdb.h
 source4/mkconfig.mk
 source4/nbt_server/dgram/proto.h
 source4/nbt_server/nbt_server_proto.h
