--- a/source4/configure.ac
+++ b/source4/configure.ac
@@ -14,13 +14,13 @@ m4_include(build/m4/env.m4)
 m4_include(../lib/replace/samba.m4)
 m4_include(lib/smbreadline/readline.m4)
 m4_include(heimdal_build/config.m4)
-m4_include(lib/util/fault.m4)
-m4_include(lib/util/signal.m4)
-m4_include(lib/util/util.m4)
-m4_include(lib/util/fsusage.m4)
-m4_include(lib/util/xattr.m4)
-m4_include(lib/util/capability.m4)
-m4_include(lib/util/time.m4)
+m4_include(../lib/util/fault.m4)
+m4_include(../lib/util/signal.m4)
+m4_include(../lib/util/util.m4)
+m4_include(../lib/util/fsusage.m4)
+m4_include(../lib/util/xattr.m4)
+m4_include(../lib/util/capability.m4)
+m4_include(../lib/util/time.m4)
 m4_include(../lib/popt/samba.m4)
 m4_include(lib/charset/config.m4)
 m4_include(lib/socket/config.m4)
