--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -323,7 +323,7 @@ LIB_OBJ = $(LIBSAMBAUTIL_OBJ) \
 	  lib/ufc.o lib/genrand.o lib/username.o \
 	  lib/util_pw.o lib/access.o lib/smbrun.o \
 	  lib/bitmap.o ../lib/crypto/crc32.o lib/dprintf.o \
-	  lib/xfile.o lib/wins_srv.o $(UTIL_REG_OBJ) \
+	  ../lib/util/xfile.o lib/wins_srv.o $(UTIL_REG_OBJ) \
 	  lib/util_str.o lib/clobber.o lib/util_sid.o lib/util_uuid.o \
 	  lib/util_unistr.o lib/util_file.o lib/data_blob.o \
 	  lib/util.o lib/util_sock.o lib/sock_exec.o lib/util_sec.o \
