--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -319,7 +319,7 @@ LIB_OBJ = $(LIBSAMBAUTIL_OBJ) \
 	  $(VERSION_OBJ) lib/charcnv.o lib/debug.o lib/fault.o \
 	  lib/interface.o ../lib/crypto/md4.o \
 	  lib/pidfile.o \
-	  lib/signal.o lib/system.o lib/sendfile.o lib/recvfile.o lib/time.o \
+	  ../lib/util/signal.o lib/system.o lib/sendfile.o lib/recvfile.o lib/time.o \
 	  ../lib/util/time.o \
 	  lib/ufc.o lib/genrand.o lib/username.o \
 	  lib/util_pw.o lib/access.o lib/smbrun.o \
