Fix "make etags" -- args list was too long for my etags

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2690,7 +2690,9 @@ include/build_env.h: script/build_env.sh
 proto::
 
 etags::
-	etags `find $(srcdir)/.. -name "*.[ch]"`
+	etags `find $(srcdir) -name "*.[ch]"`
+	etags --append `find $(srcdir)/../lib -name "*.[ch]"`
+	etags --append `find $(srcdir)/../source4 -name "*.[ch]"`
 
 ctags::
 	ctags `find $(srcdir)/.. -name "*.[ch]"`
