--- a/lib/roken/Makefile.am
+++ b/lib/roken/Makefile.am
@@ -7,10 +7,12 @@ ACLOCAL_AMFLAGS = -I ../../cf
 CLEANFILES = roken.h make-roken.c $(XHEADERS)
 
 lib_LTLIBRARIES = libroken.la
-libroken_la_LDFLAGS = -version-info 19:0:1
-libroken_la_CPPFLAGS = -DBUILD_ROKEN_LIB
+noinst_LTLIBRARIES = libnroken.la
 
-AM_CPPFLAGS += $(libroken_la_CPPFLAGS)
+libroken_la_LDFLAGS = -version-info 19:0:1
+libnroken_la_CPPFLAGS = -DBUILD_ROKEN_LIB
+
+AM_CPPFLAGS += $(libnroken_la_CPPFLAGS)
 
 noinst_PROGRAMS = make-roken snprintf-test resolve-test rkpty
 
@@ -32,7 +34,7 @@ TESTS = $(check_PROGRAMS)
 LDADD = libroken.la $(LIB_crypt)
 make_roken_LDADD = 
 
-noinst_LTLIBRARIES = libtest.la
+noinst_LTLIBRARIES += libtest.la
 libtest_la_SOURCES = strftime.c strptime.c snprintf.c
 libtest_la_CFLAGS = -DTEST_SNPRINTF -DTEST_STRPFTIME
 
@@ -54,7 +56,9 @@ snprintf_test_CFLAGS	= -DTEST_SNPRINTF
 
 resolve_test_SOURCES = resolve-test.c
 
-libroken_la_SOURCES =		\
+libroken_la_SOURCES = 
+
+libnroken_la_SOURCES =		\
 	base64.c		\
 	bswap.c			\
 	concat.c		\
@@ -105,14 +109,16 @@ libroken_la_SOURCES =		\
 	xfree.c			\
 	xdbm.h
 
-EXTRA_libroken_la_SOURCES =	\
+EXTRA_libnroken_la_SOURCES =	\
 	err.hin			\
 	glob.hin		\
 	fnmatch.hin		\
 	ifaddrs.hin		\
 	vis.hin	
 
-libroken_la_LIBADD = @LTLIBOBJS@
+libnroken_la_LIBADD = @LTLIBOBJS@
+
+libroken_la_LIBADD = libnroken.la
 
 $(LTLIBOBJS) $(libroken_la_OBJECTS): roken.h $(XHEADERS)
 
@@ -165,7 +171,7 @@ dist_include_HEADERS = 				\
 	xdbm.h
 
 if have_socket_wrapper
-libroken_la_SOURCES += socket_wrapper.c socket_wrapper.h
+libnroken_la_SOURCES += socket_wrapper.c socket_wrapper.h
 dist_include_HEADERS += socket_wrapper.h
 endif
 
