provide convenice lib
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23887 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/wind/Makefile.am
+++ b/lib/wind/Makefile.am
@@ -3,6 +3,7 @@
 include $(top_srcdir)/Makefile.am.common
 
 lib_LTLIBRARIES = libwind.la
+noinst_LTLIBRARIES = libnwind.la
 
 built = \
 	bidi_table.c				\
@@ -39,11 +40,12 @@ code = \
 
 $(code:.c=.lo): $(built)
 
-dist_libwind_la_SOURCES = $(code) $(built)
+libwind_la_SOURCES =
+
+dist_libnwind_la_SOURCES = $(code) $(built)
+nodist_libnwind_la_SOURCES = wind_err.c wind_err.h
 
 dist_include_HEADERS = wind.h
-
-nodist_libwind_la_SOURCES = wind_err.c wind_err.h
 nodist_include_HEADERS = wind_err.h
 
 $(libwind_la_OBJECTS): wind_err.h
