Share ndr_basic implementation.

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -256,7 +256,7 @@ COMPRESSION_OBJ = ../lib/compression/mszip.o
 DRSUAPI_OBJ = $(LIBNDR_DRSUAPI_OBJ) \
 	      $(COMPRESSION_OBJ)
 
-LIBNDR_OBJ = librpc/ndr/ndr_basic.o \
+LIBNDR_OBJ = ../librpc/ndr/ndr_basic.o \
 	     librpc/ndr/ndr.o \
 	     librpc/ndr/ndr_misc.o \
 	     librpc/gen_ndr/ndr_misc.o \
