Share ndr_misc implementations.

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -258,7 +258,7 @@ DRSUAPI_OBJ = $(LIBNDR_DRSUAPI_OBJ) \
 
 LIBNDR_OBJ = ../librpc/ndr/ndr_basic.o \
 	     librpc/ndr/ndr.o \
-	     librpc/ndr/ndr_misc.o \
+	     ../librpc/ndr/ndr_misc.o \
 	     librpc/gen_ndr/ndr_misc.o \
 	     librpc/gen_ndr/ndr_security.o \
 	     librpc/ndr/ndr_sec_helper.o \
